kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fast-api
  namespace: default
  labels:
    app: fast-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fast-api
  template:
    metadata:
      labels:
        app: fast-api
    spec:
      containers:
        - name: fast-api
          image: vforvog/k8s-project:0.0.1
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 300Mi
              cpu: 200m
            limits:
              memory: 400Mi
